improved layout on productDetail page

--- a/src/app/product-detail/product-detail.page.html
+++ b/src/app/product-detail/product-detail.page.html
@@ -14,6 +14,7 @@
                 </ion-button>
             </ion-menu-toggle>
         </ion-buttons>
+        
     </ion-toolbar>
 </ion-header>
 
@@ -32,14 +33,14 @@
     </ion-row>  
   
     <ion-row class="ion-padding">
-        <ion-col size-md="6" offset-md="3" class="ion-text-center">
+        <ion-col size="6" size-md="3" offset-md="3" class="ion-text-center">
             <ion-label>
                 <p>Meus Pontos:</p>
                 <p>{{ user.score }}</p>
             </ion-label>
         </ion-col>
 
-        <ion-col size-md="6" class="ion-text-center">
+        <ion-col size="6" size-md="3" class="ion-text-center">
             <ion-label>
                 <p>Pontos Necessários:</p>
                 <p>{{ product.price }}</p>
@@ -47,21 +48,20 @@
         </ion-col>
     </ion-row>
 
-    <ion-row>  
-        <ion-col>
+    <ion-row>
+        <ion-col size-md="6" offset-md="3">
             <ion-button (click)="showAlert()" expand="block" [disabled]="disableButton">Resgatar Produto</ion-button>
         </ion-col>
     </ion-row>
 
-    
-    <ion-row *ngIf="vouchers">
-        <ion-col  class="ion-text-center">
+    <ion-row *ngIf="vouchers && vouchers.length > 0">
+        <ion-col size-md="6" offset-md="3" class="ion-text-center">
             <ion-label>Comprovantes</ion-label>
             <ion-virtual-scroll [items]="vouchers">
                 <ion-item *virtualItem="let voucher" [ngClass]="{'setOpacity': voucher.validate}">
-                    <ion-label>{{voucher.voucherId}}</ion-label>
                     <ion-label *ngIf="voucher.validate">Resgatado</ion-label>
                     <ion-label *ngIf="!voucher.validate">Disponivel</ion-label>
+                    <ion-label class="ion-text-right">{{voucher.voucherId}}</ion-label>
                 </ion-item>
             </ion-virtual-scroll>
         </ion-col>
