added restaurant name to product list

--- a/src/app/product-detail/product-detail.page.html
+++ b/src/app/product-detail/product-detail.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar>
         
         <ion-buttons slot="start">
-            <ion-back-button></ion-back-button>
+            <ion-back-button defaultHref="/produtos"></ion-back-button>
         </ion-buttons>
 
         <ion-title *ngIf="product">{{product.title}}</ion-title>
