set products collection as subcollection of restaurants

--- a/src/app/product-list/product-list.page.html
+++ b/src/app/product-list/product-list.page.html
@@ -35,7 +35,8 @@
           
                               <ion-label class="ion-margin">
                                   <h2>{{ product.title }}</h2>
-                                  <p>{{ restaurants[i].title }}</p>
+                                  <!-- <p>{{ restaurants[i].title }}</p> -->
+                                  <p>{{ product.restaurant }}</p>
                               </ion-label>
       
                           </ion-item>
