--- a/src/app/restaurant-detail/restaurant-detail.page.html
+++ b/src/app/restaurant-detail/restaurant-detail.page.html
@@ -26,13 +26,13 @@
 
     <ion-row *ngIf="!isLoading" class="ion-margin-top">
         <ion-col size="6" offset="3" size-md="2" offset-md="5">
-
             <ion-img *ngIf="restaurant.image" [src]="restaurant.image"></ion-img>
+        </ion-col>
 
+        <ion-col class="ion-text-center ion-margin">
             <ion-label class="ion-text-center ion-margin" *ngIf="!products || products.length == 0">
                 Não há produtos cadastrados
             </ion-label>
-
         </ion-col>
     </ion-row>
 
