improved user score system

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,17 @@
 
                 <ion-menu-toggle>
                     <ion-item lines="none" routerLink="/produtos">
-                        <ion-icon name="happy" slot="start"></ion-icon>
+                        <ion-icon name="flame" slot="start"></ion-icon>
                         <ion-label>Promoções</ion-label>
                     </ion-item>
                 </ion-menu-toggle>
+
+                <ion-menu-toggle>
+                        <ion-item lines="none" routerLink="/qr-scan">
+                            <ion-icon name="qr-scanner" slot="start"></ion-icon>
+                            <ion-label>Scanear Código</ion-label>
+                        </ion-item>
+                    </ion-menu-toggle>
 
                 <ion-menu-toggle>
                     <ion-item lines="none" routerLink="/meus-dados">
@@ -50,7 +57,7 @@
         <ion-tab-bar slot="bottom">
         
             <ion-tab-button tab="produtos">
-                <ion-icon name="happy"></ion-icon>
+                <ion-icon name="flame"></ion-icon>
                 <ion-label>Promoções</ion-label>
             </ion-tab-button>
         
