--- a/src/app/product-detail/product-detail.page.html
+++ b/src/app/product-detail/product-detail.page.html
@@ -36,7 +36,7 @@
         <ion-col size="6" size-md="3" offset-md="3" class="ion-text-center">
             <ion-label>
                 <p>Meus Pontos:</p>
-                <p>{{ user.score }}</p>
+                <p>{{ userScore }}</p>
             </ion-label>
         </ion-col>
 
