--- a/src/app/restaurant-list/restaurant-list.page.html
+++ b/src/app/restaurant-list/restaurant-list.page.html
@@ -35,6 +35,7 @@
     
                         <ion-label class="ion-margin">
                             <h2>{{ restaurant.title }}</h2>
+                            <p>Meus Pontos: {{ restaurant.userScore }}</p>
                         </ion-label>
 
                     </ion-item>
