created qr-code scan to generate score

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,8 +27,8 @@
 
                 <ion-menu-toggle>
                         <ion-item lines="none" routerLink="/qr-scan">
-                            <ion-icon name="qr-scanner" slot="start"></ion-icon>
-                            <ion-label>Scanear Código</ion-label>
+                            <ion-icon name="barcode" slot="start"></ion-icon>
+                            <ion-label>Scanear Cupom</ion-label>
                         </ion-item>
                     </ion-menu-toggle>
 
@@ -64,6 +64,11 @@
             <ion-tab-button tab="restaurantes">
                 <ion-icon name="restaurant"></ion-icon>
                 <ion-label>Restaurantes</ion-label>
+            </ion-tab-button>
+
+            <ion-tab-button tab="qr-scan">
+                <ion-icon name="barcode"></ion-icon>
+                <ion-label>Scanear Cupom</ion-label>
             </ion-tab-button>
 
         </ion-tab-bar>
