--- a/src/app/qrcode-scanner/qrcode-scanner.page.html
+++ b/src/app/qrcode-scanner/qrcode-scanner.page.html
@@ -1,27 +1,26 @@
-<ion-content class="ion-text-center">
+<!-- <ion-content class="ion-text-center">
     <ion-spinner color="primary" style="margin-top: 20vh"></ion-spinner>
-</ion-content>
-<ion-content ion-padding *ngIf="!isLoading">
+</ion-content> -->
+<ion-content ion-padding>
 
-    <div style="display: none;">
-        <h1>Enter Value to Create QR code</h1>
-        
-        <ion-input type="text" [(ngModel)]="encodedData"></ion-input>
-     
-        <ion-button (click)="encodedText()">Create QR</ion-button>
-        
+    <div>
         <h1>Click Button To Scan</h1>
     
-   
         <ion-button (click)="scanCode()">Scan Code</ion-button>
     
-        <div *ngIf="scannedData">
+        <div>
             <p>Scanned Code Text : <b>{{ scannedData["text"] }}</b></p>
             <p>Scanned Code Format : <b>{{ scannedData["format"] }}</b></p>
+
+            <p>id restaurante: <b>{{ restaurantId }}</b></p>
 
             <p>Current Score: <b>{{ currentScore }}</b></p>
             <p>Scanned Score: <b>{{ scannedScore }}</b></p>
             <p>New Score: <b>{{ newScore }}</b></p>
+            <p>id: <b>{{ teste }}</b></p>
+            <!-- <p>old QRCode: <b>{{ oldQRCode }}</b></p> -->
+
+            
         </div>
     </div>
    
